--- a/quotes.html
+++ b/quotes.html
@@ -161,7 +161,7 @@
     <blockquote class="blockquote text-center">
       <p class="mb-0">I love shooting ships</p>
       <footer class="blockquote-footer">
-        Orange astronaut with a laser gun
+        Orange Astronaut with a laser gun
       </footer>
     </blockquote>
 
